fixes the weird layout on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,7 @@ a {
   text-decoration: none;
   color: white;
 }
+
+img {
+  width: 100%;
+}
